# SynnovatorZero

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  api-builder.skill  findings.md  main.py  pen-page-gen.skill  progress.md  pyproject.toml  start-claude.sh  task_plan.md
.claude/: mcp.json  ralph-loop.local.md
.project/: README.md  findings.md  task_plan.md
.synnovator/: openapi.yaml
alembic/: env.py
app/: database.py  deps.py  main.py  parsed.json
backend/: app.db  main.py  pyproject.toml  requirements.txt
deploy/: Dockerfile.backend  Dockerfile.frontend  deploy.sh  docker-compose.yml  host-nginx.conf  nginx.conf
docs/: README.md  Skill工作流重构走查表.xlsx  admin-schema.md  advices.md  ci-setup.md  command.md  crud-operations.md  data-types.md  development-workflow.md  examples.md  frontend-api-mapping.md  frontend-routes.md  relationships.md  rule-engine.md  test-optimization-log.md  user-journey.md  user-journeys.md  what-is-this.md
e2e/: conftest.py  helpers.py  run_e2e.py  test_auth_integration.py  test_demo.py  test_edge_cases.py  test_edit_delete_integration.py  test_event_integration.py  test_group_integration.py  test_home.py  test_journey_anonymous.py  test_journey_certificate.py  test_journey_community.py  test_journey_post_creation.py  test_journey_post_delete.py  test_journey_post_edit.py  test_journey_team_join.py  test_journey_team_registration.py  test_post_integration.py  test_trace_demo.py
frontend/: .env.development  .env.production  jest.config.ts  jest.setup.ts  middleware.ts  next.config.js  package-lock.json  package.json  (+1 more)
(+669 files in other folders)
